--- a/index.html
+++ b/index.html
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="master.css">
   <title>Frontend Mentor | Interactive rating component</title>
 
 </head>
+
 <body>
 
-  <!-- Rating state start -->
-
-<div class="container">
-  <div class="card">
-    <div class="circle img-contain">
-      <img src="images/icon-star.svg" alt="star-icon">
-    </div>
-    <h2>How did we do?</h2>
-    <p>Please let us know how we did with your support request. All feedback is appreciated
-      to help us improve our offering!</p>
-        <ul id="rating">
-          <li class="circle rating">1</li>
-          <li class="circle rating">2</li>
-          <li class="circle rating">3</li>
-          <li class="circle rating">4</li>
-          <li class="circle rating">5</li>
-        </ul>
-      <button class="subBtn" type="submit">SUBMIT</button>
-  </div>
-</div>
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  <div class="container">
-    <div class="card">
-      <div class="img-contain" style="justify-content: center;">
-        <img src="images/illustration-thank-you.svg" alt="ty-img">
-      </div>
-      <div style="display: flex; justify-content: center; margin-top: 15px;">
-        <div class="subResult">
-          You selected <span class="result"></span> out of 5
+  <div class="card-container">
+    <div class="card-front">
+      <div class="container">
+        <div class="card">
+          <div class="circle img-contain">
+            <img src="images/icon-star.svg" alt="star-icon">
+          </div>
+          <h2>How did we do?</h2>
+          <p>Please let us know how we did with your support request. All feedback is appreciated
+            to help us improve our offering!</p>
+          <ul id="rating">
+            <li class="circle rating">1</li>
+            <li class="circle rating">2</li>
+            <li class="circle rating">3</li>
+            <li class="circle rating">4</li>
+            <li class="circle rating">5</li>
+          </ul>
+          <button class="subBtn" type="submit">SUBMIT</button>
         </div>
       </div>
-      <div style="text-align: center;">
-        <h2>Thank you!</h2>
+    </div>
+    <div class="card-back">
+      <div class="container">
+        <div class="card">
+          <div class="img-contain" style="justify-content: center;">
+            <img src="images/illustration-thank-you.svg" alt="ty-img">
+          </div>
+          <div style="display: flex; justify-content: center; margin-top: 15px;">
+            <div class="subResult">
+              You selected <span class="result"></span> out of 5
+            </div>
+          </div>
+          <div style="text-align: center;">
+            <h2>Thank you!</h2>
+          </div>
+          <p>We appreciate you taking the time to give a rating. If you ever need more support,
+            don’t hesitate to get in touch!</p>
+        </div>
       </div>
-      <p>We appreciate you taking the time to give a rating. If you ever need more support,
-      don’t hesitate to get in touch!</p>
     </div>
   </div>
-
-  <!-- Thank you state end -->
-
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="github.com/PaletteJack">PaletteJack</a>.
   </div>
   <script src="main.js"></script>
 </body>
+
 </html>
